# s3-cp

./: .gitignore  Cargo.toml  Dockerfile  README.md  build-docker.sh  build-local.sh  sample.csv
src/: error.rs  main.rs  runner.rs
